[gd_scene load_steps=29 format=3 uid="uid://cuonlfduijsbo"]

[ext_resource type="Texture2D" uid="uid://brlrwo02orld3" path="res://Assets/Mario Animacion.png" id="1_7n7hb"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_wqxug"]
[ext_resource type="Texture2D" uid="uid://grduarhke2te" path="res://Assets/Mario AnimacionLadoOpuesto.png" id="2_lyvn8"]
[ext_resource type="Texture2D" uid="uid://c5l2mau07q1u7" path="res://Assets/mario.png" id="2_mxvoc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1dd2b"]
atlas = ExtResource("1_7n7hb")
region = Rect2(857, 0, 36, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mvy0"]
atlas = ExtResource("2_lyvn8")
region = Rect2(8, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_rufpj"]
atlas = ExtResource("2_lyvn8")
region = Rect2(487, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5ax0"]
atlas = ExtResource("1_7n7hb")
region = Rect2(375, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjjus"]
atlas = ExtResource("1_7n7hb")
region = Rect2(189, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_isjch"]
atlas = ExtResource("1_7n7hb")
region = Rect2(782, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaqce"]
atlas = ExtResource("2_lyvn8")
region = Rect2(858, 10, 38, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxrw2"]
atlas = ExtResource("1_7n7hb")
region = Rect2(4, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_jikas"]
atlas = ExtResource("2_lyvn8")
region = Rect2(710, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja2to"]
atlas = ExtResource("1_7n7hb")
region = Rect2(152, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_fei7b"]
atlas = ExtResource("1_7n7hb")
region = Rect2(338, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bdn1"]
atlas = ExtResource("2_lyvn8")
region = Rect2(525, 10, 38, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh3qq"]
atlas = ExtResource("1_7n7hb")
region = Rect2(412, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv17s"]
atlas = ExtResource("2_lyvn8")
region = Rect2(449, 10, 38, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mit1"]
atlas = ExtResource("2_mxvoc")
region = Rect2(148, 0, 20, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_os0yp"]
atlas = ExtResource("2_mxvoc")
region = Rect2(221, 0, 20, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovkvf"]
atlas = ExtResource("2_mxvoc")
region = Rect2(259, 0, 14, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bayo"]
atlas = ExtResource("2_mxvoc")
region = Rect2(187, 0, 14, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3qpn"]
atlas = ExtResource("2_lyvn8")
region = Rect2(820, 10, 38, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv46p"]
atlas = ExtResource("1_7n7hb")
region = Rect2(5, 0, 37, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_v538f"]
atlas = ExtResource("1_7n7hb")
region = Rect2(42, 0, 37, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ybyp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dd2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mvy0")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rufpj")
}],
"loop": true,
"name": &"duck_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5ax0")
}],
"loop": true,
"name": &"duck_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjjus")
}],
"loop": true,
"name": &"fail",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isjch")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaqce")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxrw2")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jikas")
}],
"loop": true,
"name": &"jump_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja2to")
}],
"loop": true,
"name": &"jump_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fei7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bdn1")
}],
"loop": true,
"name": &"look up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh3qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv17s")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mit1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os0yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovkvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bayo")
}],
"loop": true,
"name": &"spin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaqce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3qpn")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv46p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v538f")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jcr5"]
size = Vector2(35, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t71vt"]
size = Vector2(28, 26)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_wqxug")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_1ybyp")
animation = &"fail"

[node name="Mario" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mario"]
visible = false
position = Vector2(1.5, 2.5)
shape = SubResource("RectangleShape2D_7jcr5")

[node name="CollisionShape2D_duck" type="CollisionShape2D" parent="Mario"]
position = Vector2(2, 12)
shape = SubResource("RectangleShape2D_t71vt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.5, 2.5)
shape = SubResource("RectangleShape2D_7jcr5")

[node name="TimerSprite" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="TimeDead" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="CollisionShape2D_duck" type="CollisionShape2D" parent="."]
position = Vector2(2, 12)
shape = SubResource("RectangleShape2D_t71vt")

[node name="TimerPause" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="area_entered" from="Mario" to="." method="_on_mario_area_entered"]
